[gd_scene load_steps=17 format=3 uid="uid://c1vhiidpbpuyc"]

[ext_resource type="Script" path="res://staff.gd" id="1_fgakm"]
[ext_resource type="Texture2D" uid="uid://c2phbkarwf0kp" path="res://art/icons/3.png" id="2_41a35"]
[ext_resource type="Texture2D" uid="uid://bsbnpal1phlu4" path="res://art/Sprite-0007-2.png" id="2_a0b02"]
[ext_resource type="Texture2D" uid="uid://c51ca3dmrmbgb" path="res://art/final/dotdotdot 2.png" id="2_pec71"]
[ext_resource type="Texture2D" uid="uid://btk7en0xdypx5" path="res://art/dym.png" id="3_5pvn1"]
[ext_resource type="Texture2D" uid="uid://8tnc235wy2gm" path="res://szlug2 2.png" id="4_3ld4d"]
[ext_resource type="Texture2D" uid="uid://dg7yoia30qwqj" path="res://art/hotdog.png" id="4_3ssft"]
[ext_resource type="Texture2D" uid="uid://cyahkr7ejt4uy" path="res://art/szlug.png" id="4_cu3pp"]
[ext_resource type="Texture2D" uid="uid://bjj0ucq64g7st" path="res://art/final/chmura.png" id="6_p0a0o"]
[ext_resource type="Texture2D" uid="uid://ddb3uesmdbppq" path="res://art/icons/13.png" id="6_r1hfw"]
[ext_resource type="Texture2D" uid="uid://rvko8xbw6ta8" path="res://art/final/exit.png" id="7_2rjo6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tsh58"]

[sub_resource type="Animation" id="Animation_ngac3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -98)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.95, 1)]
}

[sub_resource type="Animation" id="Animation_27ta8"]
resource_name = "hotdog"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 3.6, 5),
"transitions": PackedFloat32Array(1, 0.466516, 1, 0.435275),
"update": 0,
"values": [Vector2(0, -98), Vector2(111, -98), Vector2(111, -98), Vector2(0, -98)]
}

[sub_resource type="Animation" id="Animation_l0fc1"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -98), Vector2(0, -96), Vector2(0, -98)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 0.574349, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.95), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2a2j"]
_data = {
"RESET": SubResource("Animation_ngac3"),
"hotdog": SubResource("Animation_27ta8"),
"idle": SubResource("Animation_l0fc1")
}

[node name="Staff" type="CharacterBody2D" groups=["staff"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fgakm")
idle_icon = ExtResource("2_pec71")
checkout_icon = ExtResource("2_41a35")
smoke_icon = ExtResource("4_3ld4d")
hotdog_icon = ExtResource("4_3ssft")
refill_icon = ExtResource("6_r1hfw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -98)
scale = Vector2(0.95, 1)
texture = ExtResource("2_a0b02")

[node name="TextureRect" type="TextureRect" parent="Sprite2D"]
offset_left = -47.3684
offset_top = -145.0
offset_right = 0.631577
offset_bottom = -97.0
texture = ExtResource("6_p0a0o")
expand_mode = 3
stretch_mode = 5

[node name="StateLabel" type="Label" parent="Sprite2D"]
unique_name_in_owner = true
visible = false
offset_left = -38.9474
offset_top = -138.0
offset_right = 34.0526
offset_bottom = -115.0
text = "Checkout"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusIcon" type="TextureRect" parent="Sprite2D"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
offset_left = -36.8421
offset_top = -141.0
offset_right = -8.84211
offset_bottom = -113.0
texture = ExtResource("7_2rjo6")
expand_mode = 3
stretch_mode = 5

[node name="Szlug" type="Node2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(-38.9474, -138)
scale = Vector2(1.05263, 1)

[node name="Dym" type="Sprite2D" parent="Sprite2D/Szlug"]
position = Vector2(76.0002, 55)
scale = Vector2(0.220672, 0.220672)
texture = ExtResource("3_5pvn1")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D/Szlug"]
position = Vector2(24.0001, 55)
texture = ExtResource("4_cu3pp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.54748e-13, -10)
rotation = 1.5708
shape = SubResource("CircleShape2D_tsh58")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 32.0
path_postprocessing = 1
avoidance_enabled = true
radius = 64.0
max_speed = 300.0
avoidance_priority = 0.75

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q2a2j")
}
autoplay = "idle"

[node name="DecisionTimer" type="Timer" parent="."]
autostart = true
